--- a/_posts/2020-08-02-kulinda.md
+++ b/_posts/2020-08-02-kulinda.md
@@ -36,6 +36,8 @@ The last type of filament was a ribbon made up of very long, thin filaments runn
 
 *Kulindadromeus* is important to the scientific community’s understanding of dinosaur integument for two reasons.  First, the fact that complex protofeathery structures are present on a dinosaur outside Theropoda lends support to the idea that ornithodirans (pterosaurs and dinosaurs, including birds) were ancestrally fluffy.  This conclusion is bolstered by the more recent finding that the early archosaur *Azendohsaurus* was warm-blooded, as well as the extremely recent discovery of *Kongonaphon*, a very early, very tiny ornithodiran.  Since the ornithodiran line appears to have gone through a bottleneck event in which they became super tiny, and since they’re known to have been ancestrally warm-blooded, it makes sense that these small-bodied animals would have required some kind of fluffy coat to keep warm.  That means that pterosaurs’ **pycnofibres**, *Psittacosaurus*’s and *Tianyulong*’s quills, birds’ and other theropods’ feathers and protofeathers, and *Kulindadromeus*’s strange plates and ribbons are probably all homologous forms based on a trait of the common ancestor to all these groups.  It also means that any creature within Ornithodira is fair game, phylogenetically, for being depicted with fluff (with a fair number of [caveats](https://obscuredinosaurfacts.com/blog/post/2019/11/16/fuzz.html))!
 
+![kulinda5](/assets/images/posts/kulinda5.png)
+
 Second, *Kulindadromeus*’s creative variety of integumentary structures indicates that the linear Stage 1 through 5 description of feather evolution created by [Richard Prum in 1999](http://prumlab.yale.edu/sites/default/files/prum_1999_mde_development.pdf), while useful in its time, is now out of date, and even potentially misleading.  If *Kulindadromeus* had novel feathery structures not included on the scale, it stands to reason that there could be many more exotic structures found among other ornithodirans yet to be discovered.  Viewed in a modern light, the linear scale also smacks of the ancient theory that **“Ontogeny Recapitulates Phylogeny”**--that, since individual birds grow their feathers in a reflection of this process through their lives, a similar process must be how the group evolved those structures.  This theory has long since been discredited as predictive, though it does remain intriguing and sometimes useful.  (For example, fish gonads live high up in their bodies near their heart.  Human embryos begin with their gonads up by the heart, and throughout gestation, they slowly descend through the body until they reach their destination, mimicking the evolutionary process of fishlike ancestor to human.)  Perhaps we don’t yet have enough data on other paths animals have taken to develop feathery structures to allow us to rewrite this scale, but we can at least conclude that dinosaur integument is more complex, diverse, and interesting than we’ve previously given it credit for.
 
 Image credits:
