--- a/_posts/2020-08-02-kulinda.md
+++ b/_posts/2020-08-02-kulinda.md
@@ -5,7 +5,7 @@ tags: [Profile, Dinosauria]
 date:   2020-08-02 01:42:08 -0700
 categories: profile
 featured_image_thumbnail:
-featured_image: /assets/images/posts/kulinda1.jpg
+featured_image: /assets/images/pages/kulinda5.jpg
 featured: true
 hidden: true
 ---
@@ -18,7 +18,7 @@ Discovered and described 2014
 
 *Kulindadromeus* was a cat-sized bipedal ornithischian dinosaur from the Middle Jurassic of Siberia whose discovery completely upended the way we thought about feathers.  It’s known from a bonebed containing hundreds of disarticulated specimens, many of which preserve minute details of both different types of scales and different types of feathers, accounting for data on essentially a complete life appearance of this animal.  (However, no melanosome analysis has been done on *Kulindadromeus*, so the color is still unknown.  I’m not sure if this is because the way the fossils were preserved is unsuitable for melanosome analysis, or if scientists just haven’t gotten around to it yet.)
 
-![kulinda2](/assets/images/posts/kulinda2.jpg)
+![kulinda1](/assets/images/posts/kulinda1.jpg)
 
 Prior to *Kulindadromeus*’s discovery, a few examples of bristly or filamentous structures were known from outside Theropoda (the bird family): all pterosaurs (flying reptiles) were known to sport a simple fur-like covering, the small basal ceratopsian (horned face dinosaur) *Psittacosaurus* had porcupine-like quills on its tail, and similar hollow quills were known to cover much of the body of the heterodontosaurid *Tianyulong*.  However, it was under debate whether these various types of protofeathery coverings evolved separately from the feathers of birds and independently in these groups, or if the last common ancestor of all known protofeathery animals was protofeathery--in other words, whether protofeathers were an **ancestral** or **derived** trait, and whether examples among various groups were **homologous** or **analogous**.
 
@@ -30,18 +30,18 @@ However, *Kulindadromeus*’s other filament types looked nothing like any previ
 
 ![kulinda3](/assets/images/posts/kulinda3.png)
 
-The last type of filament was a ribbon made up of very long, thin filaments running along its length.  These are found only on the lower leg--the reddish, shaggy portion of the leg as depicted in the page image up top.  Similar [ribbonlike features have been described](https://www.livescience.com/2987-bird-dinosaur-sported-bizarre-tail-feathers.html) on the tail of the scansoriopterygid (bat-winged dinosaur) *Epidexipteryx*, but this dinosaur is so far from *Kulindadromeus* on the dinosaur family tree that this trait is definitely convergent (evolved independently).
+The last type of filament was a ribbon made up of very long, thin filaments running along its length.  These are found only on the lower leg--the reddish, shaggy portion of the leg as depicted above.  Similar [ribbonlike features have been described](https://www.livescience.com/2987-bird-dinosaur-sported-bizarre-tail-feathers.html) on the tail of the scansoriopterygid (bat-winged dinosaur) *Epidexipteryx*, but this dinosaur is so far from *Kulindadromeus* on the dinosaur family tree that this trait is definitely convergent (evolved independently).
 
 ![kulinda4](/assets/images/posts/kulinda4.png)
 
 *Kulindadromeus* is important to the scientific community’s understanding of dinosaur integument for two reasons.  First, the fact that complex protofeathery structures are present on a dinosaur outside Theropoda lends support to the idea that ornithodirans (pterosaurs and dinosaurs, including birds) were ancestrally fluffy.  This conclusion is bolstered by the more recent finding that the early archosaur *Azendohsaurus* was warm-blooded, as well as the extremely recent discovery of *Kongonaphon*, a very early, very tiny ornithodiran.  Since the ornithodiran line appears to have gone through a bottleneck event in which they became super tiny, and since they’re known to have been ancestrally warm-blooded, it makes sense that these small-bodied animals would have required some kind of fluffy coat to keep warm.  That means that pterosaurs’ **pycnofibres**, *Psittacosaurus*’s and *Tianyulong*’s quills, birds’ and other theropods’ feathers and protofeathers, and *Kulindadromeus*’s strange plates and ribbons are probably all homologous forms based on a trait of the common ancestor to all these groups.  It also means that any creature within Ornithodira is fair game, phylogenetically, for being depicted with fluff (with a fair number of [caveats](https://obscuredinosaurfacts.com/blog/post/2019/11/16/fuzz.html))!
 
-![kulinda5](/assets/images/posts/kulinda5.png)
+![kulinda2](/assets/images/posts/kulinda2.jpg)
 
 Second, *Kulindadromeus*’s creative variety of integumentary structures indicates that the linear Stage 1 through 5 description of feather evolution created by [Richard Prum in 1999](http://prumlab.yale.edu/sites/default/files/prum_1999_mde_development.pdf), while useful in its time, is now out of date, and even potentially misleading.  If *Kulindadromeus* had novel feathery structures not included on the scale, it stands to reason that there could be many more exotic structures found among other ornithodirans yet to be discovered.  Viewed in a modern light, the linear scale also smacks of the ancient theory that **“Ontogeny Recapitulates Phylogeny”**--that, since individual birds grow their feathers in a reflection of this process through their lives, a similar process must be how the group evolved those structures.  This theory has long since been discredited as predictive, though it does remain intriguing and sometimes useful.  (For example, fish gonads live high up in their bodies near their heart.  Human embryos begin with their gonads up by the heart, and throughout gestation, they slowly descend through the body until they reach their destination, mimicking the evolutionary process of fishlike ancestor to human.)  Perhaps we don’t yet have enough data on other paths animals have taken to develop feathery structures to allow us to rewrite this scale, but we can at least conclude that dinosaur integument is more complex, diverse, and interesting than we’ve previously given it credit for.
 
 Image credits:
-[Page image](https://www.deviantart.com/olorotitan/art/Kulindadromeus-471590113)
+[Kulindadromeus 1](https://www.deviantart.com/olorotitan/art/Kulindadromeus-471590113)
 [Kulindadromeus 2](https://www.deviantart.com/ewilloughby/art/Kulindadromeus-500666275)
 [Kulindadromeus Description Paper](https://web.archive.org/web/20190209232112/http://palaeo.gly.bris.ac.uk/Benton/reprints/2014Kulinda.pdf)
 [Simplified Stage 1-5 Feather Diagram](https://theyoungbirdersodyssey.weebly.com/main-blog/paleobirding-1-which-groups-of-dinosaurs-had-feathers)
