--- a/_posts/2019-11-16-fuzz.markdown
+++ b/_posts/2019-11-16-fuzz.markdown
@@ -4,6 +4,8 @@ title:  "To Fuzz or Not To Fuzz: A Guide to Archosaur Integument"
 tags: [Paleoart, Tips]
 date:   2019-11-16 01:40:08 -0700
 categories: blog post
+featured_image_thumbnail:
+featured_image: /assets/images/posts/croc-birb.jpg
 ---
 
 By now, I’m sure you’ve seen or heard about reconstructions of fluffy or feathery dinosaurs.  Lately, paleoartists have been going crazy with the speculative fluffy integument of everything from *Tyrannosaurus*:
@@ -141,6 +143,8 @@ So, which *Heterodontosaurus* is the most probable?  In my estimation the fluffy
 ### Conclusion
 TL;DR: basically all archosauromorphs are candidates for fluff, phylogenetically, especially the small ones, all the way back to the Triassic and possibly the Permian.  Anything over the *Yutyrannus* threshold of 1.4 tonnes should be fluffed with extreme caution and only under extenuating circumstances.  Anything under this threshold, even things we're used to being depicted as scaly, such as the smallish spinosaurid *Irritator*, can be fluffed with relative confidence.
 
+The page image depicts the basal ornithodiran (relative of dinosaurs and pterosaurs), *Ixalerpeton*, in both scaly and fluffy forms.  The artist thinks the fluffy version is more likely (I agree, given *Ixalerpeton* is quite small and almost certainly endothermic), but admits that both forms are artistically pleasing.
+
 ### But what type of fluff?
 Modern birds have five different types of feathers, called Stage 1 through Stage 5 in order of increasing complexity.  They look like this:
 ![feathertypes](/assets/images/posts/feathertypes.gif)
@@ -165,6 +169,7 @@ Above: a fluffy take on *Microceratus*, a small bipedal basal ceratopsian from L
 Above: a naked take on *Gigantoraptor*, a huge oviraptorosaur from Late Cretaceous China.  It was one of the largest oviraptorosaurs (along with possibly Beibeilong), weighing between 2 and 3.6 tonnes full-grown.  That puts it well over the *Yutyrannus* threshold (1.4 tonnes), so we should expect it to be at least partly naked, and possibly completely naked.  That is one big plucked chicken.  I gave it little filaments on the head, shoulders, and tip of the tail to improve heat dissipation like an elephant.  Drawing a naked dino feels kind of weird, like it’s the 1970s or something.
 
 Image credits:
+[Page image](https://www.deviantart.com/eurwentala/art/Croc-or-birb-825068004)
 [Fatbird T.rex](https://imgur.com/gallery/rmad4)
 [Doswellia](https://www.deviantart.com/eurwentala/art/The-Armadillo-heron-798808507)
 [Euparkeria](https://www.deviantart.com/eurwentala/art/Fluffy-and-Proud-of-it-796674421)
