added sauropod paper

--- a/_posts/2020-09-09-overly.md
+++ b/_posts/2020-09-09-overly.md
@@ -49,6 +49,19 @@ Highlights:
 
 “In addition, it [the fact that average size increase is due to large animals getting more numerous rather than animals getting larger] suggests that the widespread bias toward selection for larger size observed in extant populations is unlikely to propagate into large-scale evolutionary trends observed in the fossil record.” = Today, we observe sea animals getting larger over time, but our observations from this deep-time dataset suggest that’s caused by something different.
 
+### Specialized Craniofacial Anatomy of a Titanosaurian Embryo from Argentina
+This is a brand-new paper describing a new specimen of sauropod (long-necked dinosaur) embryo's skull unearthed in Argentina.  The skull has some unexpected features, including two snout horns sort of like a rhino, and forward-facing (stereoscopic) eyes.  I did some art depicting a baby sauropod with these new features--head over to my [summer art](https://obscuredinosaurfacts.com/blog/post/2020/08/05/summer-art.html) post to see it.  Read the original paper by Martin Kundrát et al [here](https://www.sciencedirect.com/science/article/pii/S0960982220311507#bib2).
+
+Highlights:
+
+“The new specimen...demonstrates that the specialized craniofacial morphology preceded the postnatal transformation of the skull anatomy in adults of related titanosaurians.” = The strange facial features this embryo has would have gone away as it grew up.
+
+“The calcified neurocranial elements provide some morphological clues about their identity and potentially refine estimates of a prenatal stage of the titanosaurian skull.” = We can tell by the shape of the fossilized braincase pieces how close to hatching the embryo was (in this case, 75-80% of the way through development).
+
+“Putative stereoscopy was suggested for *Bajadasaurus*, a sauropod from Patagonia; however, it was assumed based on a rather dorsal than anterior placement of orbits. The stereoscopy with “dorsally” projecting orbits became functional (e.g., in predator detection) either when the head was held with the snout facing ventrally on an erected neck or when the animal was grazing and the eyes faced anteriorly.” = *Bajadasaurus* (the sauropod with two nasty-looking rows of forward-raked neck horns) is said to have had depth perception, but its eyes were facing up rather than forward.  This would have only been useful when looking down or when grazing.
+
+“We do not know the exact in ovo position of the head of MCF-PVPH-874; however, given the curled position of extant reptiles of comparable ossification stage and dorsally projected egg tooth, it might be difficult to explain how the rostral process facilitated breaking the eggshell during hatching in titanosaurians.” = We don’t know this embryo’s posture while in the egg, but if it’s anything like crocodylians and birds, the upward-facing snout horn could have functioned like an egg tooth.  But the forward-facing snout horn wouldn’t have been useful in breaking an eggshell, so we still don't know what that one was for.
+
 ### Conclusion
 I think it's unfortunate that there's such a high barrier to entry that keeps folks from being able to read scientific papers, both due to jargon and due to complex concepts that it's assumed the audience is already familiar with.  Sci-news articles and press releases mitigate that problem somewhat, but since they're a layer removed from the original content, you just can't do the same level of research using only those as sources.  Furthermore, some papers just don't have any "translations" available.  So, if any scientific authors are reading this--avoid [sesquipedalian loquaciousness](https://tvtropes.org/pmwiki/pmwiki.php/Main/SesquipedalianLoquaciousness) and [purple prose](https://tvtropes.org/pmwiki/pmwiki.php/Main/PurpleProse)! [Write like you talk](http://www.paulgraham.com/talk.html)!  Science should be accessible to all!
 
