--- a/_posts/2020-09-30-inktober-2.md
+++ b/_posts/2020-09-30-inktober-2.md
@@ -5,7 +5,7 @@ tags: [Paleoart, Inktober]
 date:   2020-09-30 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
-featured_image: /assets/images/posts/ink-2020-1.jpg
+featured_image: /assets/images/posts/ink-2020-2.jpg
 featured: true
 hidden: true
 ---
@@ -16,7 +16,7 @@ It's that time of year again!  I'm really excited to compare my efforts this yea
 
 Last year I challenged myself to relate each prompt word to a Mesozoic reptile.  This year I'll do the same, but with the additional challenge of only drawing 2020 novataxa--that is, Mesozoic reptile genera named this year.  Don't worry, there are lots to choose from!
 
-Note that since it's not quite even October yet, there's only one drawing up so far.  I will update this post every day with a new one, so please check back to see more of my work later in the month!
+Note that since it's only October second, there're only two drawings up so far.  I will update this post every day with a new one, so please check back to see more of my work later in the month!
 
 #### Day 1: Fish
 ![fish](/assets/images/posts/ink-2020-1.jpg)
@@ -25,12 +25,12 @@ It's the new istiodactylid pterosaur, *Luchibang*, canopy feeding for the abunda
 
 The holotype of *Luchibang* was found with one *Lycoptera* between its jaws and two more in its stomach, so it probably did hunt these common little fish.
 
-<!--#### Day 2: Wisp
+#### Day 2: Wisp
 ![wisp](/assets/images/posts/ink-2020-2.jpg)
 
 *Overoraptor* was a maniraptoran dinosaur from Late Cretaceous Argentina that shows a novel mix of traits found in dromaeosaurs ("raptor" dinosaurs) and birds.  It had long, flight-adapted arms like a bird, but also long, running-adapted, sickle-clawed legs, like a dromaeosaur.  Its name means "piebald thief," because the holotype bones looked piebald.  However, lots of modern birds exhibit alternative colorings (melanism, albinism, leucism, and piebaldism), so I made my *Overoraptor* actually piebald on the outside.  The pose and feathering are inspired by the photo I took of a greylag goose that had just finished preening itself, and had wisps of downy feathers stuck to its beak.  Check out last week's [post](https://obscuredinosaurfacts.com/blog/post/2020/09/23/dinophoto2.html) to see that photo and more.  Modern birds spend tons of time preening themselves, so I'd expect at least the more birdlike of the non-avian dinosaurs to have engaged in similar behavior.
 
-#### Day 3: Bulky
+<!--#### Day 3: Bulky
 ![bulky](/assets/images/posts/ink-2020-3.jpg)
 
 Here's *Yamanasaurus* and *Analong*, two newly discovered sauropods, showing off their different gaits.  *Yamanasaurus* was a saltasaurine titanosaur from Late Cretaceous Ecuador, and *Analong* was a mamenchisaurid from Middle Jurassic China.
@@ -164,4 +164,33 @@ Primitive feathers would not have been nearly as good as modern birds' feathers 
 
 *Xunmenglong*, a teeny-tiny compsognathid from Early Cretaceous China, gets caught in a death trap.  The web owner will feast on this oversized prize for days!
 
-Compsognathids were the dinosaur version of rats: small generalists that closely resemble the ancestral form.-->
+Compsognathids were the dinosaur version of rats: small generalists that closely resemble the ancestral form.
+
+#### Day 19: Dizzy
+![dizzy](/assets/images/posts/ink-2020-19.jpg)
+
+Them dragon-horses be tripping!
+
+A pair of *Riabininohadros* (an iguanodont from Late Cretaceous Ukraine) share some psychedelic mushrooms.  Reindeer are known to purposefully consume the mind-altering *Amanita muscaria* and even fight each other over mushroom availability; this is just one example of [drug use among animals](https://i.imgur.com/0peuxOk.jpg).  I wouldn't be surprised if non-avian dinosaurs liked to feel good sometimes too.
+
+#### Day 20: Coral
+![coral](/assets/images/posts/ink-2020-20.jpg)
+
+*Vallibonavenatrix* is a new genus of spinosaurid from Early Cretaceous Spain.  With the new *Spinosaurus* swimmy tail discovered this year, we now know that these dinosaurs were even more convergent with crocs than previously thought.  Giving *Vallibonavenatrix* a laterally compressed tail makes her look just like a long-legged saltwater crocodile.
+
+#### Day 21: Sleep
+![sleep](/assets/images/posts/ink-2020-21.jpg)
+
+Here's the new small basal ornithopod, *Changmiania*, from Early Cretaceous China.  This dinosaur is known from two beautifully-preserved complete skeletons that were buried intact when their burrows collapsed.  Further evidence for a fossorial lifestyle includes adaptations such as a shovel-like snout and extended shoulder blades for anchoring powerful arm muscles.  The name means "eternal sleep," since the skeletons were preserved in lifelike sleeping positions.
+
+The ["official" reconstruction](https://www.smithsonianmag.com/smart-news/new-species-burrowing-dinosaur-discovered-china-180975903/) of the holotype shows a fluffy, but somewhat skinny, dinosaur, whose anatomy is easily digestible by the viewer; I wanted to take a different approach.  My *Changmiania* is a dinosaur equivalent to the [golden mole](https://alphynix.tumblr.com/post/619929572405821442/arsanatomica-the-chronicles-of-potato-mole), which is a bizarre, eyeless, iridescent, potatolike afrotherian from the deserts of southern Africa whose skeleton looks like that of a perfectly normal-shaped small mammal.  Check out the [inside view]()!
+
+#### Day 22: Chef
+![chef](/assets/images/posts/ink-2020-22.jpg)
+
+"Chef" was a difficult one to relate to dinosaurs, since animals don't do a lot of food preparation.  The only things I could think of were burying food and digging it up later, like a dog, monkey, or corvid, and washing food like a raccoon.  The latter is more of a chef-like behavior, since burying food is arguably just for the purpose of caching rather than food preparation.  So here's *Dineobellator* (meaning "Navajo warrior"), the new velociraptorine from Latest Cretaceous New Mexico, washing *Meniscoessus*, a multituberculate mammal.
+
+A couple things were challenging about this piece.  As an adaptation for grasping items without the primary feathers getting in the way, my *Dineobellator* has its primaries held more perpendicular to the hand rather than fanned forward.  I also was having a hard time with the perspective--I meant for the gray part behind the white eyespots to be his neck, but it ended up looking more like a big domed cranium.
+
+I guess drawing dinosaurs from front or back view is another theme this Inktober.
+->>
